--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
         <p>Hi, I’m Hoda!
-I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a skilled Data Scientist with expertise in healthcare, I specialize in leveraging data to drive innovation and solve complex challenges in the medical field.
-
+I am a data scientist with a strong background in machine learning, applied statistics, and health data science. Currently, I am pursuing my Master’s in Data Science,  after earning a Bachelor’s in Statistics. My research focuses on AI-driven medical diagnostics, with a particular emphasis on melanoma detection. Beyond my academic and professional work, I am also an author passionate about making science accessible to young minds. Through engaging biographical novels, I bring the stories of influential scientists to middle school students, inspiring the next generation with the achievements of those who have shaped the world of science. Outside of research and writing, I enjoy reading, practicing yoga, and exploring new ideas that fuel my creativity. I also love visiting historical and cultural sites, immersing myself in their stories and significance.
 </p>
       </div>
       <div class="col-md-5 offset-md-1">
@@ -94,7 +93,7 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
             <div class="pb-1">Email</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">hodaanaserii at gmail</div>
+            <div class="pb-1 text-secondary">hodaanaserii @ gmail</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Phone</div>
@@ -240,29 +239,6 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
   </div>
 </div></div>
         
-
-      <div class="col d-none d-print-block">
-        <div class="mt-2">
-          <div>
-            <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-twitter mr-1"></i><span>https://twitter.com/matmirhosseini</span>
-              </div>
-            </div>
-            <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-facebook mr-1"></i><span>https://www.facebook.com/profile.php?id=61568136706109</span>
-              </div>
-            </div>
-            <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-instagram mr-1"></i><span>https://www.instagram.com/matmirhosseini</span>
-              </div>
-            </div>
-            <div class="mb-2">
-              <div class="text-dark"><i class="fab fa-github mr-1"></i><span>https://github.com/hodanaseri</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div></div>
@@ -273,16 +249,6 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
           <div class="h4">Hoda Naseri</div>
           <div class="footer-nav">
             <nav role="navigation">
-              <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link" href="https://twitter.com/matmirhosseini" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/profile.php?id=61568136706109" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/matmirhosseini" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a>
-                </li>
-                <li class="nav-item"><a class="nav-link" href="https://github.com/hodanaseri" title="Github"><i class="fab fa-github"></i><span class="menu-title sr-only">Github</span></a>
-                </li>
-              </ul>
             </nav>
           </div>
         </div>
