--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@ I am a data scientist with a strong background in machine learning, applied stat
         <div class="card-body">
           <div class="h5 mb-1">Data Scientist<span class="text-muted h6">Razi Hospital, Department of Dermatology</span></div>
           <div class="text-muted text-small mb-2">2023 - 2025</div>
-          <div>Tarbiat Modares University offers what might be the best interdisciplinary Data Science program in Iran, bringing together expertise from top professors across various fields. This program has given me the chance to explore the cutting edge of science and dive deeply into areas like machine learning, deep learning, data mining, and visualization. My passion for medicine and biology has guided my studies, allowing me to work on diverse datasets such as brain MRI scans for diagnosing dementia, MRI data for endometrial cancer detection, and ultrasound data for assessing fetal health.</div>
+          <div>Developed CNN-based models to integrate multimodal data for more accurate melanoma detection. Obtained and process dermoscopic and pathological datasets. Applied deep learning techniques to improve malignancy grading and enhance diagnostic precision.</div>
         </div>
       </div>
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Data Management Researcher<span class="text-muted h6">The Biobank of National Brain Mapping Lab</span></div>
+          <div class="h5 mb-1">Data Management Researcher <span class="text-muted h6"> The Biobank of National Brain Mapping Lab</span></div>
           <div class="text-muted text-small mb-2">2024 - 2025</div>
           <div>Contributed to building an open data platform for neuroimaging datasets.</div>
         </div>
@@ -139,16 +139,16 @@ I am a data scientist with a strong background in machine learning, applied stat
     <div class="timeline">
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Diagnosis and Prognosis of Melanoma from Dermoscopy Images Using Machine Learning and Deep Learning<span class="text-muted h6">A Systematic Literature Review</span></div>
+          <div class="h5 mb-1">Diagnosis and Prognosis of Melanoma from Dermoscopy Images Using Machine Learning and Deep Learning <span class="text-muted h6"> A Systematic Literature Review</span></div>
           <div class="text-muted text-small mb-2">2023 - 2025</div>
           <div> </div><a href="https://doi.org/10.1186/s12885-024-13423-y" target="_blank" >Published in BMC Cancer Journal.</a>
         </div>
       </div>
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Master’s Thesis<span class="text-muted h6">Melanoma Diagnosis and Malignancy Grading from Multimodal Data Using Deep Learning</span></div>
+          <div class="h5 mb-1">Master’s Thesis<span class="text-muted h6">Tarbiat Modares University</span></div>
           <div class="text-muted text-small mb-2">2024 - 2025</div>
-          <div>Tarbiat Modares University</div>
+          <div>Melanoma Diagnosis and Malignancy Grading from Multimodal Data Using Deep Learning.</div>
         </div>
       </div>
     </div>
