--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ I am a data scientist with a strong background in machine learning, applied stat
       </div>
     </div>
   </div>
-<div class="page-break"></div>
+  <hr class="d-print-none"/>
   <div class="education-section px-3 px-lg-4 pb-4">
     <h2 class="h3 mb-4">Research Experiences</h2>
     <div class="timeline">
@@ -131,7 +131,7 @@ I am a data scientist with a strong background in machine learning, applied stat
       </div>
     </div>
   </div>
-<div class="page-break"></div>
+  <hr class="d-print-none"/>
   <div class="education-section px-3 px-lg-4 pb-4">
     <h2 class="h3 mb-4">publications</h2>
     <div class="timeline">
@@ -151,7 +151,7 @@ I am a data scientist with a strong background in machine learning, applied stat
       </div>
     </div>
   </div>        
-  <div class="page-break"></div> 
+  <hr class="d-print-none"/>
   <div class="contant-section px-3 px-lg-4 pb-4" id="contact">
     <h2 class="h3 text mb-3">Contact</h2>
     <div class="row">
