--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>Hi, I’m Hoda!
-I am a data scientist with a strong background in machine learning, applied statistics, and health data science. Currently, I am pursuing my Master’s in Data Science,  after earning a Bachelor’s in Statistics. My research focuses on AI-driven medical diagnostics, with a particular emphasis on melanoma detection. Beyond my academic and professional work, I am also an author passionate about making science accessible to young minds. Through engaging biographical novels, I bring the stories of influential scientists to middle school students, inspiring the next generation with the achievements of those who have shaped the world of science. Outside of research and writing, I enjoy reading, practicing yoga, and exploring new ideas that fuel my creativity. I also love visiting historical and cultural sites, immersing myself in their stories and significance.
+        <p>Hi, I’m Hoda! I’m a data scientist with a passion for machine learning, applied statistics, and health data science. Currently, I’m pursuing my Master’s in Data Science,  after earning a Bachelor’s in Statistics. My research focuses on AI-driven medical diagnostics, with a particular emphasis on melanoma detection.</p>
+        <p>Beyond my academic work, I’m an author passionate about making science accessible to young minds. Through engaging biographical novels, I bring the stories of influential scientists to middle school students, inspiring the next generation with the achievements of those who have shaped the world of science.</p> 
+        <p>Outside of research and writing, I enjoy reading, practicing yoga, and exploring new ideas that fuel my creativity. I also love visiting historical and cultural sites, immersing myself in their stories and significance.</p>
 </p>
       </div>
       <div class="col-md-5 offset-md-1">
@@ -96,12 +97,6 @@ I am a data scientist with a strong background in machine learning, applied stat
             <div class="pb-1 text-secondary">hodaanaserii @ gmail</div>
           </div>
           <div class="col-sm-4">
-            <div class="pb-1">Phone</div>
-          </div>
-          <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+98(922)704-1179</div>
-          </div>
-          <div class="col-sm-4">
             <div class="pb-1">Address</div>
           </div>
           <div class="col-sm-8">
@@ -117,23 +112,39 @@ I am a data scientist with a strong background in machine learning, applied stat
     <div class="timeline">
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Data Scientist <span class="text-muted h6"> Razi Hospital, Department of Dermatology</span></div>
+          <div class="h5 mb-1">Data Scientist <span class="text-muted h6">    Razi Hospital, Department of Dermatology</span></div>
           <div class="text-muted text-small mb-2">2023 - 2025</div>
-          <div>Developed CNN-based models to integrate multimodal data for more accurate melanoma detection. Obtained and process dermoscopic and pathological datasets. Applied deep learning techniques to improve malignancy grading and enhance diagnostic precision.</div>
+          <div> <p>Developed CNN-based models to integrate multimodal data for more accurate melanoma detection.</p> 
+          <p>Obtained and process dermoscopic and pathological datasets.</p>
+          <p>Applied deep learning techniques to improve malignancy grading and enhance diagnostic precision.</p></div>
         </div>
       </div>
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Data Management Researcher <span class="text-muted h6"> The Biobank of National Brain Mapping Lab</span></div>
+          <div class="h5 mb-1">Data Management Researcher <span class="text-muted h6">     The Biobank of National Brain Mapping Lab</span></div>
           <div class="text-muted text-small mb-2">2024 - 2025</div>
           <div>Contributed to building an open data platform for neuroimaging datasets.</div>
         </div>
       </div>
     </div>
+    
+</div>
+<hr class="d-print-none"/>
+<div class="education-section px-3 px-lg-4 pb-4">
+    <h2 class="h3 mb-4">Research Interests</h2>
+    <ul class="list-unstyled">
+        <li><i class="fas fa-microscope text-success"></i> Applied Statistics</li>
+        <li><i class="fas fa-brain text-success"></i> Statistical Machine Learning</li>
+        <li><i class="fas fa-dna text-success"></i> Biomedical Data Analysis</li>
+        <li><i class="fas fa-database text-success"></i> Medical Imaging</li>
+        <li><i class="fas fa-user-md text-success"></i> Time Series</li>
+    </ul>
+</div>
+
   </div>
   <hr class="d-print-none"/>
   <div class="education-section px-3 px-lg-4 pb-4">
-    <h2 class="h3 mb-4">publications</h2>
+    <h2 class="h3 mb-4">Publications</h2>
     <div class="timeline">
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
@@ -144,7 +155,7 @@ I am a data scientist with a strong background in machine learning, applied stat
       </div>
       <div class="timeline-card timeline-card-success card shadow-sm">
         <div class="card-body">
-          <div class="h5 mb-1">Master’s Thesis<span class="text-muted h6">Tarbiat Modares University</span></div>
+          <div class="h5 mb-1">Master’s Thesis<span class="text-muted h6">  Tarbiat Modares University</span></div>
           <div class="text-muted text-small mb-2">2024 - 2025</div>
           <div>Melanoma Diagnosis and Malignancy Grading from Multimodal Data Using Deep Learning.</div>
         </div>
@@ -177,8 +188,6 @@ I am a data scientist with a strong background in machine learning, applied stat
         <div class="mt-2">
           <h3 class="h6">Address</h3>
           <div class="pb-2 text-secondary">Tehran, Iran</div>
-          <h3 class="h6">Phone</h3>
-          <div class="pb-2 text-secondary">+98(922)704-1179</div>
           <h3 class="h6">Email</h3>
           <div class="pb-2 text-secondary">hodaanaserii@gmail.com</div>
         </div>
