--- a/index.html
+++ b/index.html
@@ -128,20 +128,19 @@
       </div>
     </div>
     
-</div>
-<hr class="d-print-none"/>
-<div class="education-section px-3 px-lg-4 pb-4">
+  </div>
+  <hr class="d-print-none"/>
+  <div class="education-section px-3 px-lg-4 pb-4">
     <h2 class="h3 mb-4">Research Interests</h2>
     <ul class="list-unstyled">
-        <li><i class="fas fa-microscope text-success"></i> Applied Statistics</li>
+        <li><i class="fas fa-chart-line text-success"></i> Applied Statistics</li>
         <li><i class="fas fa-brain text-success"></i> Statistical Machine Learning</li>
         <li><i class="fas fa-dna text-success"></i> Biomedical Data Analysis</li>
-        <li><i class="fas fa-database text-success"></i> Medical Imaging</li>
-        <li><i class="fas fa-user-md text-success"></i> Time Series</li>
+        <li><i class="fas fa-x-ray text-success"></i> Medical Imaging</li>
+        <li><i class="fas fa-clock text-success"></i> Time Series Analysis</li>
     </ul>
-</div>
-
   </div>
+  
   <hr class="d-print-none"/>
   <div class="education-section px-3 px-lg-4 pb-4">
     <h2 class="h3 mb-4">Publications</h2>
