--- a/index.html
+++ b/index.html
@@ -160,59 +160,75 @@
         </div>
       </div>
     </div>
-  </div>        
+  </div> 
   <hr class="d-print-none"/>
-  <div class="contant-section px-3 px-lg-4 pb-4" id="contact">
+<div class="contant-section px-3 px-lg-4 pb-4" id="contact">
     <h2 class="h3 text mb-3">Contact</h2>
     <div class="row">
-      <div class="col-md-7 d-print-none">
-        <div class="my-2"><form action="https://formspree.io/f/xpwpqqvl"
-    method="POST">
-  <div class="row">
-    <div class="col-6">
-      <input class="form-control" type="text" id="name" name="name" placeholder="Your Name" required>
-    </div>
-    <div class="col-6">
-      <input class="form-control" type="email" id="email" name="_replyto" placeholder="Your E-mail" required>
-    </div>
-  </div>
-  <div class="form-group my-2">
-    <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4"  placeholder="Your Message" required></textarea>
-  </div>
-  <button class="btn btn-primary mt-2" type="submit">Send</button>
-</form>
+        <div class="col-md-7 d-print-none">
+            <div class="my-2">
+                <form action="https://formspree.io/f/xpwpqqvl" method="POST">
+                    <div class="row">
+                        <div class="col-6">
+                            <input class="form-control" type="text" id="name" name="name" placeholder="Your Name" required>
+                        </div>
+                        <div class="col-6">
+                            <input class="form-control" type="email" id="email" name="_replyto" placeholder="Your E-mail" required>
+                        </div>
+                    </div>
+                    <div class="form-group my-2">
+                        <textarea class="form-control" style="resize: none;" id="message" name="message" rows="4" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button class="btn btn-primary mt-2" type="submit">Send</button>
+                </form>
+            </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="mt-2">
-          <h3 class="h6">Address</h3>
-          <div class="pb-2 text-secondary">Tehran, Iran</div>
-          <h3 class="h6">Email</h3>
-          <div class="pb-2 text-secondary">hodaanaserii@gmail.com</div>
+        <div class="col">
+            <div class="mt-2">
+                <h3 class="h6">Address</h3>
+                <div class="pb-2 text-secondary">Tehran, Iran</div>
+                <h3 class="h6">Email</h3>
+                <div class="pb-2 text-secondary">hodaanaserii@gmail.com</div>
+                <h3 class="h6">Follow Me</h3>
+                <div class="social-icons">
+                    <a href="https://github.com/hodanaseri" target="_blank" class="text-dark me-2"><i class="fab fa-github fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/in/hoda-naseri" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin fa-lg"></i></a>
+                    <a href="https://www.researchgate.net/profile/Hoda-Naseri" target="_blank" class="text-dark me-2"><i class="fab fa-researchgate fa-lg"></i></a>
+                    <a href="https://scholar.google.com/citations?user=ZgAsfSQAAAAJ&hl=en" target="_blank" class="text-dark me-2"><i class="fas fa-graduation-cap fa-lg"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
-  </div>
-</div></div>
-        
+    </div>
+</div>
+
     </div>
   </div>
 </div></div>
     </div>
     <footer class="pt-4 pb-4 text-muted text-center d-print-none">
-      <div class="container">
+    <div class="container">
         <div class="my-3">
-          <div class="h4">Hoda Naseri</div>
-          <div class="footer-nav">
-            <nav role="navigation">
-            </nav>
-          </div>
+            <div class="h4">Hoda Naseri</div>
+            <div class="footer-nav">
+                <nav role="navigation">
+                </nav>
+            </div>
         </div>
+        <!-- Social Media Links -->
+        <div class="social-icons my-3">
+            <a href="https://github.com/hodanaseri" target="_blank" class="text-dark me-2"><i class="fab fa-github fa-lg"></i></a>
+            <a href="https://www.linkedin.com/in/hoda-naseri" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin fa-lg"></i></a>
+            <a href="https://www.researchgate.net/profile/Hoda-Naseri" target="_blank" class="text-dark me-2"><i class="fab fa-researchgate fa-lg"></i></a>
+            <a href="https://scholar.google.com/citations?user=ZgAsfSQAAAAJ&hl=en" target="_blank" class="text-dark me-2"><i class="fas fa-graduation-cap fa-lg"></i></a>
+        </div>
+        <!-- Footer Copyright -->
         <div class="text-small">
-          <div class="mb-1">&copy; All rights reserved.</div>
-          <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-        </div>
+            <div class="mb-1">&copy; All rights reserved.</div>
+            <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+         </div>
       </div>
     </footer>
+
     <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <script src="scripts/aos.js?ver=1.2.0"></script>
     <script src="scripts/main.js?ver=1.2.0"></script>
