--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="pb-1">Email</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">hodaanaserii @ gmail</div>
+            <div class="pb-1 text-secondary">hodaanaserii@gmail.com</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Address</div>
