--- a/Contact.html
+++ b/Contact.html
@@ -106,6 +106,13 @@
                   <div class="pb-2 text-secondary">Tehran, Iran</div>
                   <h3 class="h6">Email</h3>
                   <div class="pb-2 text-secondary">hodaanaserii@gmail.com</div>
+                  <h3 class="h6">Follow Me</h3>
+                  <div class="social-icons">
+                      <a href="https://github.com/hodanaseri" target="_blank" class="text-dark me-2"><i class="fab fa-github fa-lg"></i></a>
+                      <a href="https://www.linkedin.com/in/hoda-naseri" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin fa-lg"></i></a>
+                      <a href="https://www.researchgate.net/profile/Hoda-Naseri" target="_blank" class="text-dark me-2"><i class="fab fa-researchgate fa-lg"></i></a>
+                      <a href="https://scholar.google.com/citations?user=ZgAsfSQAAAAJ&hl=en" target="_blank" class="text-dark me-2"><i class="fas fa-graduation-cap fa-lg"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
