--- a/Contact.html
+++ b/Contact.html
@@ -18,16 +18,15 @@
     <style>
       /* Smaller text for navigation links */
       header .nav-link {
-        font-size: 14px; /* Adjust this value to make the text smaller */
+        font-size: 14px;
       }
-      /* Consistent styling for headers */
       h2, h3 {
-        color: #333; /* Dark gray for better readability */
+        color: #333;
       }
       .section-subtext {
         text-align: center;
         font-size: 16px;
-        color: #777; /* Light gray for subtext */
+        color: #777;
         margin-bottom: 30px;
       }
       .section-divider {
@@ -36,26 +35,16 @@
         background-color: #ddd;
         margin: 40px 0;
       }
-      /* Spacing for the contact section */
       .contant-section {
-        margin-top: 40px; /* Add space above the contact section */
+        margin-top: 40px;
       }
       .contant-section h2 {
-        margin-bottom: 20px; /* Add space below the contact header */
+        margin-bottom: 20px;
       }
-      /* Add shadow effect to the cover */
       .cover {
-        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); /* Bootstrap's shadow-lg effect */
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
       }
     </style>
-    <noscript>
-      <style type="text/css">
-        [data-aos] {
-            opacity: 1 !important;
-            transform: translate(0) scale(1) !important;
-        }
-      </style>
-    </noscript>
   </head>
   <body id="top">
     <header class="d-print-none">
@@ -120,21 +109,31 @@
         </div>
       </div>
     </div>
+
     <footer class="pt-4 pb-4 text-muted text-center d-print-none">
       <div class="container">
         <div class="my-3">
           <div class="h4">Hoda Naseri</div>
           <div class="footer-nav">
-            <nav role="navigation">
-            </nav>
+            <nav role="navigation"></nav>
           </div>
         </div>
+        <!-- Social Media Links in Footer -->
+        <h3 class="h6">Follow Me</h3>
+        <div class="social-icons my-3">
+            <a href="https://github.com/hodanaseri" target="_blank" class="text-dark me-2"><i class="fab fa-github fa-lg"></i></a>
+            <a href="https://www.linkedin.com/in/hoda-naseri" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin fa-lg"></i></a>
+            <a href="https://www.researchgate.net/profile/Hoda-Naseri" target="_blank" class="text-dark me-2"><i class="fab fa-researchgate fa-lg"></i></a>
+            <a href="https://scholar.google.com/citations?user=ZgAsfSQAAAAJ&hl=en" target="_blank" class="text-dark me-2"><i class="fas fa-graduation-cap fa-lg"></i></a>
+        </div>
+        <!-- Footer Copyright -->
         <div class="text-small">
           <div class="mb-1">&copy; All rights reserved.</div>
           <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
         </div>
       </div>
     </footer>
+
     <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
     <script src="scripts/aos.js?ver=1.2.0"></script>
     <script src="scripts/main.js?ver=1.2.0"></script>
