--- a/Album.html
+++ b/Album.html
@@ -110,7 +110,7 @@
           <div class="section-divider"></div>
           <div class="gallery-section px-3 px-lg-4 pb-4">
             <h3 class="section-header">Photo Gallery</h3>
-            <p class="section-subtext">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="section-subtext">Here are my favorite photos.</p>
             
             <div class="row">
               <!-- Gallery Item 1 -->
@@ -119,7 +119,7 @@
                   <img src="/1742297644940.jpg" class="img-fluid" alt="Image 1">
                 </a>
                 <div class="image-description">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Carpet Museum of Iran, Tehran
                 </div>
               </div>
               <!-- Gallery Item 2 -->
@@ -128,7 +128,7 @@
                   <img src="/1742297644954.jpg" class="img-fluid" alt="Image 2">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  National Museum of Iran, Tehran
                 </div>
               </div>          
               <!-- Gallery Item 3 -->
@@ -137,7 +137,7 @@
                   <img src="/1742297644970.jpg" class="img-fluid" alt="Image 3">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  National Museum of Iran, Tehran
                 </div>
               </div>
               <!-- Gallery Item 4 -->
@@ -146,7 +146,7 @@
                   <img src="/1742297645213.jpg" class="img-fluid" alt="Image 4">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Sa'dabad Cultural and Historical Complex, Tehran
                 </div>
               </div>
               <!-- Gallery Item 5 -->
@@ -155,7 +155,7 @@
                   <img src="/1742297645023.jpg" class="img-fluid" alt="Image 5">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Carpet Museum of Iran, Tehran
                 </div>
               </div>
               <!-- Gallery Item 6 -->
@@ -164,7 +164,7 @@
                   <img src="/1742297645048.jpg" class="img-fluid" alt="Image 6">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Turtles Beach, Hormoz
                 </div>
               </div>
               <!-- Gallery Item 7 -->
@@ -173,7 +173,7 @@
                   <img src="/1742297645074.jpg" class="img-fluid" alt="Image 7">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Red Beach, Hormoz
                 </div>
               </div>
               <!-- Gallery Item 8 -->
@@ -182,7 +182,7 @@
                   <img src="/1742297645102.jpg" class="img-fluid" alt="Image 8">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  The Valley of the Statues, Hormoz
                 </div>
               </div>
               <!-- Gallery Item 9 -->
@@ -191,7 +191,7 @@
                   <img src="/1742297645142.jpg" class="img-fluid" alt="Image 9">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Chahkooh Canyon, Qeshm
                 </div>
               </div>
               <!-- Gallery Item 10 -->
@@ -200,7 +200,7 @@
                   <img src="/1742297645170.jpg" class="img-fluid" alt="Image 10">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Stars Valley, Qeshm
                 </div>
               </div>
               <!-- Gallery Item 11 -->
@@ -209,7 +209,7 @@
                   <img src="/1742297645192.jpg" class="img-fluid" alt="Image 11">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Kharbas Cave, Qeshm
                 </div>
               </div>
               <!-- Gallery Item 12 -->
@@ -218,7 +218,7 @@
                   <img src="/1742297645001.jpg" class="img-fluid" alt="Image 12">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Carpet Museum of Iran, Tehran
                 </div>
               </div>
               <!-- Gallery Item 13 -->
@@ -227,7 +227,7 @@
                   <img src="/1742297645252.jpg" class="img-fluid" alt="Image 13">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Sa'dabad Cultural and Historical Complex, Tehran
                 </div>
               </div>
               <!-- Gallery Item 14 -->
@@ -236,7 +236,7 @@
                   <img src="/1742297645276.jpg" class="img-fluid" alt="Image 14">
                 </a>
                 <div class="image-description">
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Zoroastrian Fire Temple of Yazd, Yazd
                 </div>
               </div>
             </div>
