--- a/Album.html
+++ b/Album.html
@@ -260,6 +260,14 @@
             </nav>
           </div>
         </div>
+        </div>
+        <!-- Social Media Links in Footer -->
+        <div class="social-icons my-3">
+            <a href="https://github.com/hodanaseri" target="_blank" class="text-dark me-2"><i class="fab fa-github fa-lg"></i></a>
+            <a href="https://www.linkedin.com/in/hoda-naseri" target="_blank" class="text-dark me-2"><i class="fab fa-linkedin fa-lg"></i></a>
+            <a href="https://www.researchgate.net/profile/Hoda-Naseri" target="_blank" class="text-dark me-2"><i class="fab fa-researchgate fa-lg"></i></a>
+            <a href="https://scholar.google.com/citations?user=ZgAsfSQAAAAJ&hl=en" target="_blank" class="text-dark me-2"><i class="fas fa-graduation-cap fa-lg"></i></a>
+        </div>
         <div class="text-small">
           <div class="mb-1">&copy; All rights reserved.</div>
           <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
