--- a/Album.html
+++ b/Album.html
@@ -256,10 +256,8 @@
         <div class="my-3">
           <div class="h4">Hoda Naseri</div>
           <div class="footer-nav">
-            <nav role="navigation">
-            </nav>
+            <nav role="navigation"></nav>
           </div>
-        </div>
         </div>
         <!-- Social Media Links in Footer -->
         <div class="social-icons my-3">
@@ -268,6 +266,7 @@
             <a href="https://www.researchgate.net/profile/Hoda-Naseri" target="_blank" class="text-dark me-2"><i class="fab fa-researchgate fa-lg"></i></a>
             <a href="https://scholar.google.com/citations?user=ZgAsfSQAAAAJ&hl=en" target="_blank" class="text-dark me-2"><i class="fas fa-graduation-cap fa-lg"></i></a>
         </div>
+        <!-- Footer Copyright -->
         <div class="text-small">
           <div class="mb-1">&copy; All rights reserved.</div>
           <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
