--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/avatar.jpg" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
-        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Mat Mirhosseini</h2>
+        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Hoda Naseri</h2>
         <p data-aos="fade-left" data-aos-delay="100">Data Scientist</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="right-resume.pdf" target="_blank">Download CV</a><a class="btn btn-success shadow-sm mt-1" href="#contact">Lets talk</a></div>
       </div>
@@ -77,9 +77,9 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>Hi, I’m Mat!
-I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a skilled Data Scientist with expertise in healthcare, I specialize in leveraging data to drive innovation and solve complex challenges in the medical field.
-
+        <p>Hi, I’m Hoda! I’m a data scientist with a passion for machine learning, applied statistics, and health data science. Currently, I’m pursuing my Master’s in Data Science,  after earning a Bachelor’s in Statistics. My research focuses on AI-driven medical diagnostics, with a particular emphasis on melanoma detection.</p>
+        <p>Beyond my academic work, I’m an author passionate about making science accessible to young minds. Through engaging biographical novels, I bring the stories of influential scientists to middle school students, inspiring the next generation with the achievements of those who have shaped the world of science.</p> 
+        <p>Outside of research and writing, I enjoy reading, practicing yoga, and exploring new ideas that fuel my creativity. I also love visiting historical and cultural sites, immersing myself in their stories and significance.</p>
 </p>
       </div>
       <div class="col-md-5 offset-md-1">
@@ -94,13 +94,7 @@ I’m passionate about Machine Learning, Deep Learning, and Bioinformatics. As a
             <div class="pb-1">Email</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">matmirhosseini@gmail</div>
-          </div>
-          <div class="col-sm-4">
-            <div class="pb-1">Phone</div>
-          </div>
-          <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+98(910)003-2128</div>
+            <div class="pb-1 text-secondary">hodaanaserii@gmail.com</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Address</div>
